--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,14 @@
-rootProject.name = 'fsynth'
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "kotlin-multiplatform") {
+                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
+            }
+        }
+    }
+}
+rootProject.name = 'PlotAssert'
 
-include 'core', 'cli', 'web'
+
+enableFeaturePreview('GRADLE_METADATA')
+
