--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    }
+}
+
 plugins {
     id 'kotlin-multiplatform' version '1.3.11'
 }
@@ -9,6 +18,7 @@ version '1.0.0'
 
 apply plugin: 'maven-publish'
 apply from: "$rootDir/ktlint.gradle"
+apply from: "$rootDir/publishing.gradle"
 
 kotlin {
     targets {
