In Bintray publish script, only create empty version
There's a problem with uploading build artifacts to Bintray,
so I'm disabling it entirely. It should be fixed in #1.

--- a/publishing.gradle
+++ b/publishing.gradle
@@ -5,6 +5,8 @@ afterEvaluate {
     bintray {
         user = System.getenv('BINTRAY_USER')
         key = System.getenv('BINTRAY_API_KEY')
+        // This config only creates an empty version on Bintray.
+        // Files have to be uploaded manually through Bintray website.
         pkg {
             repo = 'it.krzeminski'
             name = 'PlotAssert'
@@ -17,6 +19,5 @@ afterEvaluate {
                 vcsTag = '1.0.0'
             }
         }
-        publications = publishing.publications.collect { it.name }
     }
 }
