--- a/ktlint.gradle
+++ b/ktlint.gradle
@@ -14,16 +14,14 @@ task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
     main = "com.github.shyiko.ktlint.Main"
-    // Run only for the actual production code, omit tests.
-    args "src/commonMain/**/*.kt", "-v"
+    args "src/**/*.kt", "-v"
 }
 
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     main = "com.github.shyiko.ktlint.Main"
-    // Run only for the actual production code, omit tests.
-    args "-F", "src/commonMain/**/*.kt"
+    args "-F", "src/**/*.kt"
 }
 
 afterEvaluate {
