Upgrade Gradle wrapper to 6.0
It's the minimal version which is needed for Kotlin 1.4.

Part of #16.

--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,9 @@ task jacocoTestReport(type: JacocoReport, dependsOn: jvmTest) {
         html.enabled true
     }
     afterEvaluate {
-        sourceDirectories = files("$projectDir/src/commonMain/kotlin")
-        classDirectories = files("$buildDir/classes/kotlin/jvm/main")
-        executionData = files("$buildDir/jacoco/jvmTest.exec")
+        getSourceDirectories().setFrom(files("$projectDir/src/commonMain/kotlin"))
+        getClassDirectories().setFrom(files("$buildDir/classes/kotlin/jvm/main"))
+        getExecutionData().setFrom(files("$buildDir/jacoco/jvmTest.exec"))
     }
 }
 
