--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id 'kotlin-multiplatform' version '1.3.72'
+    id 'kotlin-multiplatform' version '1.4.0'
     id 'jacoco'
 }
 repositories {
@@ -22,15 +22,10 @@ apply from: "$rootDir/ktlint.gradle"
 apply from: "$rootDir/publishing.gradle"
 
 kotlin {
-    targets {
-        fromPreset(presets.jvm, 'jvm')
-        fromPreset(presets.js, 'js') {
-            configure([compilations.main, compilations.test]) {
-                tasks.getByName(compileKotlinTaskName).kotlinOptions {
-                    moduleKind = 'commonjs'
-                }
-            }
-        }
+    jvm()
+    js {
+        browser()
+        nodejs()
     }
     sourceSets {
         commonMain {
