--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 project.bintray.org=krzema1212
 project.bintray.repository=it.krzeminski
-project.bintray.package=PlotAssert
+project.bintray.package=plotassert
 
 project.scm.url=https://github.com/krzema12/PlotAssert
 project.description=Test the shape of your functions!
