[#18] Try 'plot-assert' to avoid conflict
During publishing I got:

```
* What went wrong:
Execution failed for task ':publishKotlinMultiplatformPublicationToMavenRepository'.
> Failed to publish publication 'kotlinMultiplatform' to repository 'maven'
   > Could not PUT 'https://api.bintray.com/maven/***/it.krzeminski/plotassert/it/krzeminski/PlotAssert/0.3.0-beta/PlotAssert-0.3.0-beta.jar'. Received status code 409 from server: Conflict
```

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 project.bintray.org=krzema1212
 project.bintray.repository=it.krzeminski
-project.bintray.package=plotassert
+project.bintray.package=plot-assert
 
 project.scm.url=https://github.com/krzema12/PlotAssert
 project.description=Test the shape of your functions!
