--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ project.bintray.org=krzema1212
 project.bintray.repository=it.krzeminski
 project.bintray.package=plot-assert
 
-project.scm.url=https://github.com/krzema12/PlotAssert
+project.scm.url=https://github.com/krzema12/plot-assert
 project.description=Test the shape of your functions!
 project.license.name=MIT License
-project.license.url=https://raw.githubusercontent.com/krzema12/PlotAssert/master/LICENSE
+project.license.url=https://raw.githubusercontent.com/krzema12/plot-assert/master/LICENSE
