[#18] Rename library to vis-assert

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 project.bintray.org=krzema1212
 project.bintray.repository=it.krzeminski
-project.bintray.package=plot-assert
+project.bintray.package=vis-assert
 
-project.scm.url=https://github.com/krzema12/plot-assert
+project.scm.url=https://github.com/krzema12/vis-assert
 project.description=Test the shape of your functions!
 project.license.name=MIT License
-project.license.url=https://raw.githubusercontent.com/krzema12/plot-assert/master/LICENSE
+project.license.url=https://raw.githubusercontent.com/krzema12/vis-assert/master/LICENSE
