--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,13 @@ buildscript {
 
 plugins {
     id 'jacoco'
+    id 'org.jlleitschuh.gradle.ktlint' version '9.4.1'
 }
 
 apply plugin: com.soywiz.korlibs.KorlibsPlugin
 
 group 'it.krzeminski.vis-assert'
 version '0.4.0-beta'
-
-apply from: "$rootDir/ktlint.gradle"
 
 jacoco {
     toolVersion = '0.8.3'
