[#24] Add Gradle properties about the author

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,7 @@ project.scm.url=https://github.com/krzema12/vis-assert
 project.description=Test the shape of your functions!
 project.license.name=MIT License
 project.license.url=https://raw.githubusercontent.com/krzema12/vis-assert/master/LICENSE
+
+project.author.id=krzema12
+project.author.name=Piotr Krzeminski
+project.author.email=sonatype@krzeminski.it
