[#24] Temporarily disable publishing to Maven Central to debug the issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ./gradlew releaseMavenCentral
+      - run: echo 'disabled: ./gradlew releaseMavenCentral'
